--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
         "node-red-contrib-ibmpush":"0.x",
         "node-red-contrib-bluemix-hdfs":"0.x",
         "node-red-nodes-cf-sqldb-dashdb":"0.x",
-        "node-red-nodes-rbe":"0.x",
-        "node-red-nodes-random":"0.x",
-        "node-red-nodes-smooth":"0.x",
+        "node-red-node-rbe":"0.x",
+        "node-red-node-random":"0.x",
+        "node-red-node-smooth":"0.x",
         "node-red-contrib-web-worldmap":"0.x",
         "node-red-contrib-ui":"*",
         "node-red-contrib-admin":"*"
