--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name"         : "node-red-bluemix-starter",
-    "version"      : "0.4.26",
+    "version"      : "0.4.27",
     "dependencies": {
         "when": "~3.x",
         "nano": "~5.11.0",
@@ -16,12 +16,11 @@
         "node-red-contrib-ibmpush":"0.x",
         "node-red-contrib-bluemix-hdfs":"0.x",
         "node-red-nodes-cf-sqldb-dashdb":"0.x",
-        "node-red-node-rbe":"0.x",
         "node-red-node-random":"0.x",
         "node-red-node-smooth":"0.x",
         "node-red-contrib-web-worldmap":"1.x",
         "node-red-node-geofence":"*",
-        "node-red-dashboard":"2.*",
+        "node-red-dashboard":"^2.0.0",
         "node-red-contrib-admin":"*"
     },
     "engines": {
