--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "node-red-contrib-web-worldmap":"1.x",
         "node-red-node-geofence":"*",
         "node-red-dashboard":"node-red/node-red-dashboard",
-        "node-red-contrib-admin":"*"
+        "node-red-contrib-admin":"*",
+        "node-red-contrib-slacker":"*"
     },
     "engines": {
         "node": "4.x"
