--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "node-red-node-geofence":"*",
         "node-red-dashboard":"node-red/node-red-dashboard",
         "node-red-contrib-admin":"*",
-        "node-red-contrib-slacker":"*"
+        "node-red-contrib-slacker":"*",
+        "node-red-node-base64": "*"
     },
     "engines": {
         "node": "4.x"
