--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name"         : "node-red-bluemix-starter",
-    "version"      : "0.5.0",
+    "version"      : "0.5.1",
     "dependencies": {
         "when": "~3.x",
         "nano": "~5.11.0",
         "cfenv":"~1.0.0",
-        "feedparser":"~0.19.2",
+        "feedparser":"^1.1.3",
         "redis":"~0.10.1",
         "request":"~2.74.0",
         "node-red":"*",
