--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "node-red-nodes-cf-sqldb-dashdb":"0.x",
         "node-red-contrib-web-worldmap":"1.x",
         "node-red-node-geofence":"*",
-        "node-red-contrib-slacker":"*",
+        "node-red-contrib-slacker":"*"
     },
     "scripts": {
         "start": "node --max-old-space-size=384 node_modules/node-red/red.js --settings ./bluemix-settings.js -v"
