--- a/manifest.yml
+++ b/manifest.yml
@@ -7,4 +7,4 @@ applications:
 declared-services:
   sample-node-red-cloudantNoSQLDB:
     label: cloudantNoSQLDB
-    plan:  Shared
+    plan:  Lite
