--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
     "name"         : "node-red-bluemix-starter",
     "version"      : "0.5.1",
     "dependencies": {
-        "when": "~3.x",
-        "nano": "~6.2.0",
-        "cfenv":"~1.0.0",
-        "feedparser":"^2.0.0",
+        "when": "3.x",
+        "nano": "5.x",
+        "cfenv":"1.x",
+        "feedparser":"1.x",
         "redis":"~0.10.1",
-        "request":"~2.79.0",
+        "request":"~2.74.0",
         "node-red":"*",
         "node-red-bluemix-nodes":"1.x",
         "node-red-node-openwhisk":"0.x",
