--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
-
 {
     "name"         : "node-red-bluemix-starter",
     "version"      : "0.5.1",
     "dependencies": {
-        "when": "~3.x",
-        "nano": "~5.11.0",
-        "cfenv":"~1.0.0",
-        "feedparser":"~0.19.2",
-        "redis":"~0.10.1",
-        "node-red": "0.x",
+        "when": "3.x",
+        "nano": "6.x",
+        "cfenv":"1.x",
+        "request":"~2.79.0",
+        "node-red":"*",
         "node-red-bluemix-nodes":"1.x",
-        "node-red-node-watson":"0.x",
         "node-red-node-openwhisk":"0.x",
         "node-red-node-cf-cloudant":"0.x",
+        "node-red-node-random":"0.x",
+        "node-red-node-smooth":"0.x",
+        "node-red-dashboard":"node-red/node-red-dashboard",
+
+        "node-red-node-watson":"*",
         "node-red-contrib-scx-ibmiotapp":"0.x",
-        "node-red-contrib-ibmpush":"0.x",
-        "node-red-contrib-bluemix-hdfs":"0.x",
-        "node-red-nodes-cf-sqldb-dashdb":"0.x"
+        "node-red-contrib-web-worldmap":"*"
     },
     "scripts": {
         "start": "node --max-old-space-size=128 node_modules/node-red/red.js --settings ./bluemix-settings.js -v"
