--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
     "dependencies": {
         "when": "~3.x",
         "nano": "6.2.x",
-        "bcrypt": "1.0.2",
+        "bcrypt": "^1.0.2",
         "cfenv":"~1.0.0",
         "express":"4.x",
         "body-parser":"1.x",
         "http-shutdown":"1.2.0",
         "node-red": "0.x",
-        "node-red-bluemix-nodes":"1.x",
         "node-red-node-openwhisk":"0.x",
         "node-red-node-cf-cloudant":"0.x",
         "node-red-contrib-scx-ibmiotapp":"0.x",
         "node-red-node-random":"0.x",
         "node-red-node-smooth":"0.x",
         "node-red-dashboard":"*",
-        "node-red-contrib-web-worldmap":"*"
+        "node-red-contrib-web-worldmap":"*",
+        "node-red-contrib-mqtt-broker":"*"
     },
     "scripts": {
         "start": "node --max-old-space-size=384 index.js --settings ./bluemix-settings.js -v"
