--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name"         : "node-red-bluemix-starter",
     "version"      : "0.6.0",
     "dependencies": {
-        "when": "~3.x",
-        "nano": "6.2.x",
-        "bcrypt": "^1.0.2",
+        "when": "~3.7.8",
+        "nano": "~6.4.2",
+        "bcrypt": "~1.0.3",
         "cfenv":"~1.0.0",
         "express":"4.x",
         "body-parser":"1.x",
