--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
         "node-red-node-openwhisk":"0.x",
         "node-red-node-cf-cloudant":"0.x",
         "node-red-contrib-scx-ibmiotapp":"0.x",
-        "node-red-node-random":"0.x",
-        "node-red-node-smooth":"0.x",
+        "node-red-node-random":"*",
+        "node-red-node-smooth":"*",
         "node-red-dashboard":"*",
         "node-red-contrib-web-worldmap":"*"
     },
@@ -23,6 +23,6 @@
         "start": "node --max-old-space-size=384 index.js --settings ./bluemix-settings.js -v"
     },
     "engines": {
-        "node": "6.x"
+        "node": "8.x"
     }
 }
